force-app/main/default/objects/Conversion_Trend__c/Conversion_Trend__c.object-meta.xml
<CustomObject>
    <label>Conversion Trend</label>
    <nameField>
        <displayFormat>TRND-{0000000}</displayFormat>
        <label>Conversion Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Trends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>