force-app/main/default/objects/Conversion_Trend__c/fields/Conversion_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Tracker__c</fullName>
    <label>Conversion Tracker</label>
    <referenceTo>Conversion_Tracker__c</referenceTo>
    <relationshipLabel>Conversion Trends</relationshipLabel>
    <relationshipName>Conversion_Trends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>