force-app/main/default/objects/Conversion_Trend__c/fields/Conversion_Unit_Change_Formula__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Unit_Change_Formula__c</fullName>
    <formula>IF( 
(ZB_Units__c - Last_Month_s_ZB_Units__c) &gt; 0, 
image(&quot;/servlet/servlet.FileDownload?file=0153b000002z7Ro&quot;,&quot;UP&quot;), 
IF( 
(ZB_Units__c - Last_Month_s_ZB_Units__c) = 0, 
image(&quot;/servlet/servlet.FileDownload?file=0153b000002z7Ry&quot;,&quot;PARTIALLY Converted&quot;), 
image(&quot;/servlet/servlet.FileDownload?file=0153b000002z7Rt&quot;,&quot;Down&quot;))) &amp; &quot; &quot; &amp; 
TEXT(ZB_Units__c - Last_Month_s_ZB_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Unit Change</label>
    <type>Text</type>
</CustomField>