force-app/main/default/objects/Conversion_Trend__c/fields/Last_Month_s_ZB_Units__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_s_ZB_Units__c</fullName>
    <label>Last Month&apos;s ZB Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>