force-app/main/default/objects/Conversion_Trend__c/fields/ZB_Units__c.field-meta.xml
<CustomField>
    <fullName>ZB_Units__c</fullName>
    <label>ZB Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>